@@ -1,3 +1,7 @@
+2016-10-17 Massimo Manghi <mxmanghi@apache.org>
+    * rivet/packages/formbroker/formbroker.tcl: add global
+    quoting switch, add method for single form variable method (untested)
+
 2016-10-15 Massimo Manghi <mxmanghi@apache.org>
     * rivet/packages/formbroker/formbroker.tcl: add quote 
     mechanism
